repalce placehold.it links.

--- a/src/templates/cases.jade
+++ b/src/templates/cases.jade
@@ -11,13 +11,13 @@ block content
                     a.b-cases__item(href='#')
                         .b-cases__cover
                             .b-cases__media
-                                img.b-cases__image(src='http://placehold.it/900x400', alt='')
+                                img.b-cases__image(src='https://via.placeholder.com/900x400', alt='')
 
                                 if index % 2
                                     span.js-cases-cover-video(data-src="assets/img/video_preview.mp4")
 
                             .b-cases__bagde
-                                img.b-cases__client(src='http://placehold.it/69x24', alt='')
+                                img.b-cases__client(src='https://via.placeholder.com/69x24', alt='')
 
                             .b-cases__tags
                                 span.b-cases__tag #ЯНДЕКС
