--- a/src/templates/client.jade
+++ b/src/templates/client.jade
@@ -8,7 +8,7 @@ block content
 
             .b-client
                 .b-client__head
-                    img.b-client__image(src='https://placehold.it/200x33')
+                    img.b-client__image(src='https://via.placeholder.com/200x33')
                     a.b-client__link(href='#') apteka-klassika.ru
 
                 .b-client__text.b-text
@@ -75,7 +75,7 @@ block content
                                 .text-center: span.b-reviews__title 1ДСКиКО
                             .b-reviews__content
                                 .b-reviews__media_video
-                                    .b-reviews__link(href='http://www.youtube.com/watch?v=opj24KnzrWo'): img.img-responsive(src='http://placehold.it/320x180')
+                                    .b-reviews__link(href='http://www.youtube.com/watch?v=opj24KnzrWo'): img.img-responsive(src='https://via.placeholder.com/320x180')
                             .b-reviews__footer
                                 span.b-reviews__date 22.06.2016
                                 span.b-reviews__type Видеоотзывы
@@ -84,7 +84,7 @@ block content
                                 .text-center: span.b-reviews__title Газелькин
                             .b-reviews__content.b-reviews__content_type_image
                                 .b-reviews__media_image
-                                    .b-reviews__link(href='#review_1', data-url="http://placehold.it/196x264"): img.img-responsive(src='http://placehold.it/196x264')
+                                    .b-reviews__link(href='#review_1', data-url="https://via.placeholder.com/196x264"): img.img-responsive(src='https://via.placeholder.com/196x264')
                             .b-reviews__footer
                                 span.b-reviews__date 22.06.2016
                                 span.b-reviews__type Рекомендации
@@ -156,7 +156,7 @@ block content
                     #review_1
                         .b-review-image
                             .b-review-image__container
-                                img(src="http://placehold.it/519x731", alt="")
+                                img(src="https://via.placeholder.com/519x731", alt="")
 
 
         .b-clients.g-pt100
