--- a/src/templates/offers.jade
+++ b/src/templates/offers.jade
@@ -39,7 +39,7 @@ block content
                     a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
                         p.b-offers__title 3 месяца бесплатного использования Jivosite
                         .b-offers__content
-                            img.img-responsive.b-offers__image(src='http://placehold.it/500x400')
+                            img.img-responsive.b-offers__image(src='https://via.placeholder.com/500x400')
                             .b-offers__label.b-offers__label_bonuses БОНУСОВ #[b 2000]#[span.b-offer__rub ₽]
                             .b-offers__label.b-offers__label_date Действует до #[b 10.06.2016]
                             .b-offers__label.b-offers__label_coupons #[b 15] ПРОМОКОДОВ
